--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,9 @@
 {
   "version": 2,
   "builds": [
-    { "src": "api/index.ts", "use": "@vercel/node" },
-    { "src": "src/frontend/index.html", "use": "@vercel/static" }
+    { "src": "dist/main.js", "use": "@vercel/node" }
   ],
   "routes": [
-    { "src": "/uploads.*", "dest": "/api/index.ts" },
-    { "src": "/(.*)", "dest": "src/frontend/index.html" }
+    { "src": "/(.*)", "dest": "/dist/main.js" }
   ]
 }
