--- a/package.json
+++ b/package.json
@@ -20,10 +20,15 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@babel/runtime": "^7.28.4",
+    "@crustio/type-definitions": "^1.3.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.0.1",
+    "@polkadot/api": "^16.5.2",
+    "@polkadot/keyring": "^13.5.8",
+    "@polkadot/util-crypto": "^13.5.8",
     "@types/express": "^4.17.25",
     "@types/multer": "^2.0.0",
     "axios": "^1.13.2",
